--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -805,7 +805,7 @@ and compares every two adjacent, non-yanked versions and parses the output.
 The results (which take several days to generate) are saved to a CSV file.
 
 Unfortunately, cargo-semver-checks is not yet perfect and sometimes produces false-positives
-(that hopefully soon will be fixed). Most of them were because of one of those two reasons:
+that are to be fixed. However, most of them were caused by one of the two cases:
 \begin{itemize}
 	\item an item had a \texttt{\#[doc(hidden)]} macro,
 		which hides it from the documentation and thus is not part
