--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -759,9 +759,9 @@ describes how we managed to obtain them.
 
 TODO: calculate Xi constants.
 
-Those crates have in total X0 releases (as of time of writing)
-that were made later than XX-XX-XXXX, where X1 of them don't compile anymore on modern Rust
-and X2 of the remaining ones are are yanked.
+Those crates have X0 total releases (at the time of writing)
+that were published after XX-XX-XXXX, X1 of which do not compile anymore with the current version of Rust
+and X2 of the remaining ones were yanked.
 
 From the X3 non-yanked releases which we were able to compile,
 \textbf{in X4 of them we found one or more semver breaks}.
