--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -676,6 +676,8 @@ implements the following methods:
 	\item \texttt{resolve\_neighbors} -- finds the neighboring vertices across an edge,
 	\item \texttt{resolve\_coercion} -- attempts to coerce a vertex into a more specific type.
 \end{itemize}
+The interface exported by the adapter (all the vertices with their properties and relations
+between them) is called a \textit{schema}.
 These are used by the Trustfall engine to execute lint queries written in the Trustfall language.
 
 \section{trustfall-rustdoc}\label{r:section_trustfall_rustdoc}
