--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -831,7 +831,7 @@ We came up with two solutions:
 		parsing the output to know which items were removed.
 	\item As a way to know whether a reported item is a false-positive or a true-positive,
 		we created a witness (more on that in secion \ref{r:witness_generation})
-		and we ignored all items whose witnesses compile on both baseline and current versions.
+		and ignored all items whose witnesses compile on both baseline and current versions.
 \end{itemize}
 
 Those two techniques greatly reduced the number of reports.
