--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -837,7 +837,7 @@ We came up with two solutions:
 Those two techniques greatly reduced the number of reports.
 To be sure that the remaining reported items were true-positives,
 we manually checked the code (we managed to generate links to the line of code where each item was defined).
-Mostly we checked whether an item was indeed a part of the public API
+Mostly we verified whether an item was indeed a part of the public API
 (not below a \say{doc hidden} and not a part of a test module).
 With that, we have high confidence that the found items are indeed true-positives.
 
