Fix section link

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -709,7 +709,7 @@ to maintain solution, which allowed the action to be run only on Linux hosts. Th
 we implemented the V2 version of the action in a platform-independent way using TypeScript
 and Node.js, allowing it to be used on all runners supported by GitHub Actions.
 The differences between the V1 and V2 of the action are further discussed in section
-\ref{r:section_continuous_integration_improvements}.
+\ref{r:section_github_action}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %           Implementation            %
