Mention cache-related inputs

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -764,10 +764,11 @@ adds numerous features:
 \end{itemize}
 Moreover, the action now includes several optimizations of the running time:
 \begin{itemize}
-	\item cargo-semver-checks is downloaded as a precompiled binary instead of being built from source,
-	\item the rustdoc of the baseline version is cached between the action runs, so that it is generated
-		only once,
-	\item when possible, downloads from crates.io are being made using recently developed "sparse" protocol
+	\item The cargo-semver-checks is downloaded as a precompiled binary instead of being built from source.
+	\item The rustdoc of the baseline version is cached between the action runs, so that it is generated
+		only once. The caching strategy might be adjusted by the user using inputs \texttt{shared-key}
+		and \texttt{prefix-key} (e.g. to share the cache between different GitHub jobs).
+	\item When possible, downloads from crates.io are being made using recently developed "sparse" protocol
 		\cite{crates_io_sparse_protocol}.
 \end{itemize}
 
