Change font on a feature name

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -732,7 +732,7 @@ Now, user can adjust it for their specific use case.
 
 The new default behaviour is to include all the features,
 filtering out heuristicly the ones breaking semver, looking the 
-the feature name. For example, feature 'unstable' would not be
+the feature name. For example, feature {\ttfamily unstable} would not be
 included. The list of banned names was created by looking
 at features in popular crates.
 
