--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -784,7 +784,7 @@ of the project consists of over 30 checks, which are:
 	\item comparing the cache created by the action with the expected one.
 \end{itemize}
 Such a comprehensive collection of tests helped us to find and fix several bugs not only in the action,
-but also in the cargo-semver-checks itself, and will make it easier to maintain the project in the future.
+but also in cargo-semver-checks itself, and will make it easier to maintain the project in the future.
 
 \section{Test suite}\label{r:section_test_suite}
 
