--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -925,7 +925,7 @@ and immediate contact with him through chat).
 					\texttt{verbose}, \texttt{release-type} and \texttt{rust-toolchain},
 					which are parsed and passed to the CLI,
 				\item using pre-built binaries to speed up the action,
-				\item adding caching of baseline rustdoc JSON between action runs along with
+				\item adding baseline rustdoc caching between action runs along with
 					inputs \texttt{shared-key} and \texttt{prefix-key}, which allow the user
 					to adjust the caching strategy,
 				\item setting up environmental variables for best performance of cargo (disabling
