--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -780,7 +780,7 @@ of the project consists of over 30 checks, which are:
 	\item running the unit tests,
 	\item veryfying whether the action works on Linux, Windows and macOS with different versions of
 		Rust installed,
-	\item testing each of the action inputs by running it on a test repository,
+	\item testing all of the action's inputs by running it on a test repository,
 	\item comparing the cache created by the action with the expected one.
 \end{itemize}
 Such a comprehensive collection of tests helped us to find and fix several bugs not only in the action,
