--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -758,7 +758,8 @@ adds numerous features:
 	\item input \texttt{manifest-path}, which allows to specify the path to the \texttt{Cargo.toml} file
 		of the crate or workspaces to be processed if it is not located in the directory where
 		the action is run,
-	\item input \texttt{verbose}, which might be used to enable the verbose output of the tool,
+	\item input \texttt{verbose}, which might be used to enable extended output of the tool,
+		providing details about every executed lint,
 	\item input \texttt{release-type}, with possible values \texttt{major}, \texttt{minor} and \texttt{patch},
 		allowing to specify the type of the release instead of deducing it from the crate's version change.
 \end{itemize}
