--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -745,7 +745,7 @@ general file structure and development process. Imagine a user who is eager to c
 and decides to develop a new lint:
 \begin{itemize}
 	\item \textbf{Previously} they had to go through a tedious process of modifying single lines
-	of code in several different files. What is more, the tests for the new lint had to be written
+	of code in several different files. What is more, tests for the new lint had to be written
 	in a single file where all the baseline and current code fragments had to be preceded by
 	a macro differentiating them. Although there were instructions available, they lacked
 	a general introduction of the project's approach and design goals.
