--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -751,7 +751,7 @@ and decides to develop a new lint:
 	a general introduction of the project's approach and design goals.
 
 	\item \textbf{Currently} the user only has to choose an appropriate name for their lint
-	and implement it together with suitable tests -- all the minor file changes are taken care of
+	and implement it together with suitable tests -- all the minor file changes are handled
 	by a dedicated script that we developed. The tests have been split into two separate
 	directories and allow the user to provide the baseline and current test versions just
 	as if they were developing a crate (the difference being instead of avoiding semver violations
