--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -754,7 +754,7 @@ and decides to develop a new lint:
 	and implement it together with suitable tests -- all the minor file changes are handled
 	by a dedicated script that we developed. The tests have been split into two separate
 	directories and allow the user to provide the baseline and current test versions just
-	as if they were developing a crate (the difference being instead of avoiding semver violations
+	as if they were developing a crate (with the difference being that instead of avoiding semver violations
 	they are supposed to make ones that trigger their lint). The instructions received an overhaul
 	as well to be more welcoming and informative, greatly improving the user experience
 	and encouraging them to make new contributions.
