--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -747,7 +747,7 @@ and decides to develop a new lint:
 	\item \textbf{Previously} they had to go through a tedious process of modifying single lines
 	of code in several different files. What is more, tests for the new lint had to be written
 	in a single file where all the baseline and current code fragments had to be preceded by
-	a macro differentiating them. Although there were instructions available, they lacked
+	a differentiation macro. Although there were instructions available, they lacked
 	a general introduction of the project's approach and design goals.
 
 	\item \textbf{Currently} the user only has to choose an appropriate name for their lint
