Comment out the binaries paragraph

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -765,12 +765,12 @@ its dedicated test cases we decided to check it against all available tests from
 lints as well. This allowed us to detect and eliminate some unnoticed false-positives,
 but even more importantly lowered the risk of new ones occuring in the tool's further development.
 
-Another significant improvement was the introduction of pre-compiled, executable binaries
-of the tool, available for different operating systems. This not only helps the users by saving
-their time normally spent on downloading and compiling the tool, but also makes it more accessible
-since the newest binaries are included with every release. They bring an additional benefit
-of stability, too -- as they undergo numerous tests before being added to the newest version,
-they are the safest way of using the tool on one's project.
+% Another significant improvement was the introduction of pre-compiled, executable binaries
+% of the tool, available for different operating systems. This not only helps the users by saving
+% their time normally spent on downloading and compiling the tool, but also makes it more accessible
+% since the newest binaries are included with every release. They bring an additional benefit
+% of stability, too -- as they undergo numerous tests before being added to the newest version,
+% they are the safest way of using the tool on one's project.
 
 With time we kept on introducing even more changes, such as:
 \begin{itemize}
