--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -735,10 +735,10 @@ The differences between the V1 and V2 of the action are further discussed in sec
 
 \section{Healthier codebase}\label{r:section_healthier_codebase}
 
-Since we are aware of how important it is to maintain high quality of the project's codebase,
-our contributions to the tool were not just limited to developing new code. We have introduced
-several changes and refactors that not only made the codebase easier to navigate and expand,
-but also prepared the tool to be even more successful in the future.
+Our contributions to the tool were not just limited to developing new code. We are aware of
+how important it is to maintain high quality of the project's codebase, thus we introduced
+several changes and refactors that not only made it easier to navigate and expand, but also
+prepared the tool to be even more successful in the future.
 
 With lints being the core of cargo-semver-checks, our first major refactoring targeted both their
 general file structure and development process. Imagine a user who is eager to contribute
