--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -759,12 +759,8 @@ and decides to develop a new lint:
 	as well to be more welcoming and informative, greatly improving the user experience
 	and encouraging them to make new contributions.
 \end{itemize}
-
-Shortly after this refactor we changed how the tests are run. Instead of limiting one lint to just
-its dedicated test cases we decided to check it against all available tests from other
-lints as well. This allowed us to detect and eliminate some unnoticed false-positives,
-but even more importantly lowered the risk of new ones occuring in the tool's further development
-(for more details see section \ref{r:section_test_suite}).
+Shortly after we additionally changed how those new tests are run
+(for more details on the tests rework, see section \ref{r:section_test_suite}).
 
 % Another significant improvement was the introduction of pre-compiled, executable binaries
 % of the tool, available for different operating systems. This not only helps the users by saving
