smaller changes mentioned

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -774,6 +774,13 @@ we were able to change how the tool generates rustdoc for the baseline version o
 by introducing a placeholder project with a direct dependency to it, imitating how one would
 naturally access it.
 
+Besides there were numerous minor changes, such as:
+\begin{itemize}
+	\item renaming the project's file and function names so that they became more descript,
+	\item adjusting the clippy (cargo's built-in formatter) lints,
+	\item multiple, smaller refactors and optimizations in various parts of the codebase.
+\end{itemize}
+
 \section{Bugfixes}\label{r:section_bugfixes}
 
 <Here write a list about found and fixed bugs>
